// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/grade/_series/index.vue { locale: "en" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">DanceDanceRevolution A20 - GRADE</h1>
  <div class="buttons"><a class="button is-info">
      <!----><span>
      NONSTOP(A20)
    </span>
      <!---->
    </a><button type="button" to="/grade/16" disabled="disabled" class="button is-info is-outlined">
      <!----><span>
      GRADE(A20)
    </span>
      <!---->
    </button><a class="button is-info">
      <!----><span>
      NONSTOP(A20 PLUS)
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      GRADE(A20 PLUS)
    </span>
      <!---->
    </a></div>
  <courselist-stub courses=""></courselist-stub>
</section>
`;

exports[`pages/grade/_series/index.vue { locale: "ja" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">DanceDanceRevolution A20 - 段位認定</h1>
  <div class="buttons"><a class="button is-info">
      <!----><span>
      NONSTOP(A20)
    </span>
      <!---->
    </a><button type="button" to="/grade/16" disabled="disabled" class="button is-info is-outlined">
      <!----><span>
      段位認定(A20)
    </span>
      <!---->
    </button><a class="button is-info">
      <!----><span>
      NONSTOP(A20 PLUS)
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      段位認定(A20 PLUS)
    </span>
      <!---->
    </a></div>
  <courselist-stub courses=""></courselist-stub>
</section>
`;
